[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/canvas.gd" type="Script" id=3]
[ext_resource path="res://scripts/save.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Control" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 500.121, 263.532 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="canvas" type="Control" parent="."]
anchor_right = 1.0
margin_left = -5000.0
margin_top = -5000.0
margin_right = 5000.0
margin_bottom = 5000.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 504.874, 291.328 )
current = true
script = ExtResource( 2 )

[node name="Interface" parent="." instance=ExtResource( 1 )]

[node name="units" type="Node2D" parent="."]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
usage = 0
gui_disable_input = true
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Viewport"]
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="angle1_value_changed" from="Interface" to="canvas" method="_on_Interface_angle1_value_changed"]
[connection signal="angle2_value_changed" from="Interface" to="canvas" method="_on_Interface_angle2_value_changed"]
[connection signal="width_value_changed" from="Interface" to="canvas" method="_on_Interface_width_value_changed"]
